# clean-tree

./: README.md  pyproject.toml  tox.ini
clean_tree/: config.py  git.py  logging.py
clean_tree/cli/: main.py
tests/: test_logging.py
