[project]
name='clean-tree'
description='Commitment is hard :)'
version='0.0.0'
authors=[
    { name = 'Carter Fendley' }
]

dependencies = [
    "click",
    "colorama",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "pytest-cov"
]

[project.scripts]
clean-tree = "clean_tree.cli.main:clean_tree"